各所を改善